--- a/src/style/UserPage.css
+++ b/src/style/UserPage.css
@@ -4,40 +4,23 @@
   min-height: 100vh;
 }
 
-.my-page-link {
-  display: flex;
-  gap: 2rem;
-  margin-top: 3rem;
-  margin-left: 1rem;
-}
-
-.link {
-  text-decoration: none;
-  color: inherit;
-}
-
-.link:hover {
-  text-decoration: underline;
-  color: #2b6777;
-}
-
 .profilepicture img {
   width: 100%;
   height: 100%;
-  border-radius: 75px;
+  border-radius: 100px;
   overflow: hidden;
   object-fit: cover;
 }
 
 .profilepicture {
-  width: 150px;
-  height: 150px;
-  margin-top: -140px; 
+  width: 175px;
+  height: 175px;
+  margin-top: -150px; 
   z-index: 1;
 }
 
 .name {
-  font-size: 20px;
+  font-size: 28px;
   margin-left: 175px;
   margin-top: 10px;
 
@@ -142,14 +125,16 @@
 }
 
 #topContainer {
-  width: 80%;
+  width: 70%;
   margin: 0 auto;
   
   
 }
 
 #nameAndAdmin {
+  margin-left: 10px;
   display: inline-block;
+  margin-top: 10px;
 }
 
 .cards {
@@ -181,4 +166,27 @@
   margin: 0 auto;
   width: 80%;
   margin-top: 1rem;
+}
+
+.my-page-link {
+  display: flex;
+  gap: 2rem;
+  margin-top: 3rem;
+  margin-left: 1rem;
+}
+
+.link {
+  text-decoration: none;
+  color: inherit;
+  font-size: 18px;
+}
+
+.link:hover {
+  color: #2b6777;
+
+}
+
+.active-link {
+  font-weight: bold;
+  color: #2b6777;
 }
